--- a/XinjingdailyBot.WebAPI/nlog.config
+++ b/XinjingdailyBot.WebAPI/nlog.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	autoReload="true"
@@ -18,7 +18,7 @@
 		<target name="console" xsi:type="ColoredConsole"
 			errorStream="True"
 			enableAnsiOutput="True"
-			layout="${level:format=FirstCharacter} ${date} [${logger:shortName=true}] ${message} ${exception:format=toString,Data}">
+			layout="${level:format=FirstCharacter} ${date} [${logger:shortName=false}]${newline}  ${message} ${exception:format=toString,Data}">
 			<highlight-row condition="level == LogLevel.Trace" foregroundColor="DarkGray" />
 			<highlight-row condition="level == LogLevel.Debug" foregroundColor="DarkGray" />
 			<highlight-row condition="level == LogLevel.Info" foregroundColor="Gray" />
@@ -31,7 +31,7 @@
 		<target name="consoleSql" xsi:type="ColoredConsole"
 			errorStream="True"
 			enableAnsiOutput="True"
-			layout="${level:format=FirstCharacter} ${date} [${logger:shortName=true}] ${message} ${exception:format=toString,Data}">
+			layout="${level:format=FirstCharacter} ${date} [${logger:shortName=false}]${newline}  ${message} ${exception:format=toString,Data}">
 			<highlight-row condition="level == LogLevel.Trace" foregroundColor="Black"
 				backgroundColor="DarkGray" />
 			<highlight-row condition="level == LogLevel.Debug" foregroundColor="Green"
