--- a/XinjingdailyBot.WebAPI/nlog.config
+++ b/XinjingdailyBot.WebAPI/nlog.config
@@ -18,7 +18,7 @@
 		<target name="console" xsi:type="ColoredConsole"
 			errorStream="True"
 			enableAnsiOutput="True"
-			layout="${level:format=FirstCharacter} ${date} [${logger:shortName=false}]${newline}  ${message} ${exception:format=toString,Data}">
+			layout="${level:format=FirstCharacter} ${date} [${logger:shortName=false}] ${message} ${exception:format=toString,Data}">
 			<highlight-row condition="level == LogLevel.Trace" foregroundColor="DarkGray" />
 			<highlight-row condition="level == LogLevel.Debug" foregroundColor="DarkGray" />
 			<highlight-row condition="level == LogLevel.Info" foregroundColor="Gray" />
@@ -31,7 +31,7 @@
 		<target name="consoleSql" xsi:type="ColoredConsole"
 			errorStream="True"
 			enableAnsiOutput="True"
-			layout="${level:format=FirstCharacter} ${date} [${logger:shortName=false}]${newline}  ${message} ${exception:format=toString,Data}">
+			layout="${level:format=FirstCharacter} ${date} [${logger:shortName=false}] ${message} ${exception:format=toString,Data}">
 			<highlight-row condition="level == LogLevel.Trace" foregroundColor="Black"
 				backgroundColor="DarkGray" />
 			<highlight-row condition="level == LogLevel.Debug" foregroundColor="Green"
