--- a/XinjingdailyBot.WebAPI/appsettings.json
+++ b/XinjingdailyBot.WebAPI/appsettings.json
@@ -25,7 +25,9 @@
     "Proxy": null,
     "ThrowPendingUpdates": false,
     "AutoLeaveOtherGroup": false,
-    "SuperAdmins": []
+    "SuperAdmins": [],
+    "EnablePlanPost": false,
+    "PostSecondMenu": true
   },
   // 频道设置
   "Channel": {
