--- a/XinjingdailyBot.WebAPI/appsettings.json
+++ b/XinjingdailyBot.WebAPI/appsettings.json
@@ -80,7 +80,9 @@
       // 拒绝频道定时置顶
       "RejectChannelTask": "0 0 0 * * ?",
       // 已排期稿件定时发布
-      "PlanedPostsTask": "0 0 0 * * ?"
+      "PlanedPostsTask": "0 0 0 * * ?",
+      // 定时更新审核群审核状态
+      "ReviewStatusTask": "0,30 * * * * ?"
     }
   }
 }
