--- a/XinjingdailyBot.Tasks/XinjingdailyBot.Tasks.csproj
+++ b/XinjingdailyBot.Tasks/XinjingdailyBot.Tasks.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<OutputType>Library</OutputType>
@@ -9,7 +9,6 @@
 		<ProjectReference Include="..\XinjingdailyBot.Interface\XinjingdailyBot.Interface.csproj" />
 		<ProjectReference Include="..\XinjingdailyBot.Model\XinjingdailyBot.Model.csproj" />
 		<ProjectReference Include="..\XinjingdailyBot.Repository\XinjingdailyBot.Repository.csproj" />
-		<ProjectReference Include="..\XinjingdailyBot.Service\XinjingdailyBot.Service.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -18,7 +17,6 @@
 
 	<ItemGroup>
 		<PackageReference Include="Quartz" />
-		<PackageReference Include="Quartz.AspNetCore" />
 	</ItemGroup>
 
 	<ItemGroup>
