--- a/XinjingdailyBot.WebAPI/appsettings.json
+++ b/XinjingdailyBot.WebAPI/appsettings.json
@@ -13,11 +13,10 @@
       }
     }
   },
-
   // 调试模式
   "Debug": false,
   // Swagger
-  "Swagger": true,
+  "Swagger": false,
   "Statistic": true,
   // 机器人设置
   "Bot": {
@@ -27,7 +26,7 @@
     "AutoLeaveOtherGroup": false,
     "SuperAdmins": [],
     "EnablePlanPost": false,
-    "PostSecondMenu": true
+    "PostSecondMenu": false
   },
   // 频道设置
   "Channel": {
@@ -35,7 +34,9 @@
     "CommentGroup": "",
     "SubGroup": "",
     "AcceptChannel": "",
-    "RejectChannel": ""
+    "RejectChannel": "",
+    "SecondChannel": "",
+    "SecondCommentGroup": ""
   },
   // 消息设置
   "Message": {
