--- a/XinjingdailyBot.WebAPI/XinjingdailyBot.WebAPI.csproj
+++ b/XinjingdailyBot.WebAPI/XinjingdailyBot.WebAPI.csproj
@@ -2,9 +2,11 @@
 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
+		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" />
 		<PackageReference Include="NLog.Extensions.Logging" />
 		<PackageReference Include="Quartz.AspNetCore" />
 		<PackageReference Include="Swashbuckle.AspNetCore" />
