--- a/XinjingdailyBot.WebAPI/appsettings.json
+++ b/XinjingdailyBot.WebAPI/appsettings.json
@@ -85,5 +85,16 @@
       // 定时更新审核群审核状态
       "ReviewStatusTask": "0,30 * * * * ?"
     }
+  },
+  // 等级设置
+  "Level": {
+    // 每个通过稿件获得的经验
+    "ExpPerAccept": 0.1,
+    // 每个拒绝稿件获得的经验
+    "ExpPerReject": 0.01,
+    // 每个审核稿件获得的经验
+    "ExpPerReview": 0.05,
+    // 每个过期稿件获得的经验
+    "ExpPerExpire": 0.01
   }
 }
