--- a/XinjingdailyBot.WebAPI/appsettings.json
+++ b/XinjingdailyBot.WebAPI/appsettings.json
@@ -83,7 +83,7 @@
       // 已排期稿件定时发布
       "PlanedPostsTask": "0 0 0 * * ?",
       // 定时更新审核群审核状态
-      "ReviewStatusTask": "0,30 * * * * ?"
+      "ReviewStatusTask": "*/10 * * * * ?"
     }
   },
   // 等级设置
