--- a/XinjingdailyBot.WebAPI/appsettings.json
+++ b/XinjingdailyBot.WebAPI/appsettings.json
@@ -26,7 +26,8 @@
     "AutoLeaveOtherGroup": false,
     "SuperAdmins": [],
     "EnablePlanPost": false,
-    "PostSecondMenu": false
+    "PostSecondMenu": false,
+    "EnableWebPagePreview": false
   },
   // 频道设置
   "Channel": {
