--- a/XinjingdailyBot.WebAPI/XinjingdailyBot.WebAPI.csproj
+++ b/XinjingdailyBot.WebAPI/XinjingdailyBot.WebAPI.csproj
@@ -3,6 +3,7 @@
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
 		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+		<DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
 	</PropertyGroup>
 
 	<ItemGroup>
