--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -7,18 +7,17 @@
     <PackageVersion Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
     <PackageVersion Include="Microsoft.Extensions.Http" Version="8.0.0" />
     <PackageVersion Include="Microsoft.Extensions.Logging" Version="8.0.0" />
-    <PackageVersion Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
+    <PackageVersion Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
     <PackageVersion Include="MySql.Data" Version="8.2.0" />
-    <PackageVersion Include="NLog" Version="5.2.7" />
-    <PackageVersion Include="NLog.Extensions.Logging" Version="5.3.7" />
+    <PackageVersion Include="NLog" Version="5.2.8" />
+    <PackageVersion Include="NLog.Extensions.Logging" Version="5.3.8" />
     <PackageVersion Include="NLog.Web.AspNetCore" Version="5.3.5" />
     <PackageVersion Include="Quartz" Version="3.8.0" />
     <PackageVersion Include="Quartz.AspNetCore" Version="3.8.0" />
     <PackageVersion Include="SqlSugar.IOC" Version="2.0.0" />
-    <PackageVersion Include="SqlSugarCore" Version="5.1.4.127-preview21" />
+    <PackageVersion Include="SqlSugarCore" Version="5.1.4.136" />
     <PackageVersion Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageVersion Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
-    <PackageVersion Include="System.CodeDom" Version="8.0.0" />
     <PackageVersion Include="Telegram.Bot" Version="20.0.0-alpha.1" />
     <PackageVersion Include="Microsoft.CodeAnalysis.Common" Version="4.8.0" />
   </ItemGroup>
